# Memora

./: .gitignore  AGENTS-UI.md  AGENTS.md  MEMORY_研究生-kimi.md  README.md  package.json  todolist.md
chrome-extension/: background.js  content.css  content.js  manifest.json  popup.html  popup.js
docs/: CHANGELOG.md  Error.md  TTS.md
src/: App.tsx  index.css  main.tsx  router.ts
src-backup-20260414-1239/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  models.rs  prompts.rs
src-tauri/src/ai/: completion.rs  config.rs  embedding.rs  mod.rs  streaming.rs  validation.rs
src-tauri/src/bridge/: clipboard.rs  mod.rs  ws_server.rs
src-tauri/src/commands/: backup.rs  bridge.rs  calibration.rs  chat.rs  correction.rs  generator.rs  memory_search.rs  mod.rs  notification.rs  ocr.rs  parser.rs  persona.rs  record.rs  settings.rs  stt.rs  tts.rs  updater.rs
src-tauri/src/core/: ai_provider.rs  clipboard.rs  compaction.rs  mod.rs  storage.rs  ws_bridge.rs
src-tauri/src/infra/: crypto.rs  db.rs  http_client.rs  mod.rs  paths.rs  vectors.rs
src-tauri/src/parsers/: detect.rs  imessage.rs  ios_backup.rs  mod.rs  qq.rs  wechat.rs  wechat_win.rs
src-tauri/src/repo/: chat_repo.rs  mod.rs  persona_repo.rs  session_repo.rs  voice_repo.rs
src-tauri/src/services/: calibration_service.rs  chat_service.rs  compaction.rs  correction_service.rs  generator_service.rs  heartbeat_service.rs  memory_search_service.rs  mod.rs
src-tauri/src/tts/: audio_utils.rs  cache.rs  minimax.rs  mod.rs  provider.rs
(+42 files in other folders)
