[package]
name = "memora"
version = "0.0.2"
description = "Memora — AI 记忆伴侣"
authors = ["Memora"]
edition = "2024"
rust-version = "1.94.1"

[lib]
name = "memora_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json", "rustls", "form", "stream", "multipart"], default-features = false }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
anyhow = "1"
regex = "1"
machine-uid = "0.5"
aes-gcm = "0.10"
base64 = "0.22"
sha2 = "0.11"
uuid = { version = "1", features = ["v4"] }
rusqlite = { version = "0.39.0", features = ["bundled"] }
r2d2_sqlite = "0.33.0"
r2d2 = "0.8.10"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["fmt", "env-filter"] }
thiserror = "2.0.18"
futures = "0.3"
async-trait = "0.1"
lazy_static = "1.5.0"
pinyin = "0.10"

# Data parsers (Phase 1: wechat txt/html/csv)
scraper = "0.22"
csv = "1"
tauri-plugin-clipboard-manager = "2"
arboard = "3.6.1"
tokio-tungstenite = "0.26"
tauri-plugin-updater = "2"
filetime = "0.2"
tracing-appender = "0.2.4"

[dev-dependencies]
tempfile = "3"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-process = "2"

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
